<resources>
    <string name="app_name">Grizzly AI Vision</string>
    <string name="action_about">About</string>

    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="temp_image">View Content Description</string>
    <string name="describe">Grizzly Vision utilizes two services, Pixabay and Google\'s Cloud Vision API. The app fetches editor\'s choice images from Pxabay, and analyzes them with the Vision API to compare the author\'s image tag to what Google\'s Cloud thinks it sees.</string>

    <string name="created">Created by Mike Deiters</string>
    <string name="class_title">ITEC 4550</string>
    <string name="date">June 16, 2017</string>
    <string name="credits">Credits</string>

    <string name="profile_cap">Mike Deiters</string>
    <string name="pixabay">Pixabay Logo</string>
    <string name="vision">Google Vision API</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="pixabayTags">Image Tags:</string>

</resources>
